# kaf9s

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/tui/: app.rs  colours.rs  event.rs  handlers.rs  mod.rs  root.rs  theme.rs  tui.rs  ui.rs
cli/src/tui/tabs/: about.rs  email.rs  mod.rs  recipe.rs  traceroute.rs  weather.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/config/: mod.rs
