[package]
name = "kaf9s-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kaf9s-core = { path = "../core"}
ratatui = { version = "0.25.0", features = ["widget-calendar"] }
crossterm = "0.27.0"
itertools = "0.12.0"
palette = "0.7.3"
unicode-width = "0.1.11"
time = "0.3.31"
anyhow = "1.0.76"