[package]
name = "kaf9s-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.28.0", features = ["cmake-build", "ssl", "ssl-vendored", "gssapi-vendored"]}
keyring = "0.10.1"
dirs = "3.0.2"
serde = {version = "1.0.126", features = ["derive"]}
serde_yaml = "0.8.17"
thiserror = "1.0"
byteorder = "1.4.3"